<resources>

    <!-- Language -->
    <string name="language">Language</string>
    <string name="language_en">English</string>
    <string name="language_cs">Czech</string>


    <!-- General -->
    <string name="app_name">Water.it</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_show_plants">Show plants</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <string name="setLanguageTitle">Choose a language</string>
    <string name="deletePlantConfirmationText">Are you sure you want to delete this plant?</string>
    <string name="deleteRoomConfirmationText">Are you sure you want to delete this room?</string>

    <string name="version">Version</string>
    <string name="image">Image</string>
    <string name="pickImage">Pick an image</string>
    <string name="home">Home</string>
    <string name="plants">Plants</string>
    <string name="rooms">Rooms</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>

    <string name="recentlyPlantedPlants">Recently planted</string>
    <string name="about">About</string>
    <string name="aboutMainText">
        Water.it is an application that is supposed to help everyone who likes
        the joy of making his/her home a greener place with plants. We will help you with keeping track of all
        your plants and remind you when the time comes to feed your plants with some much needed water.
    </string>
    <string name="aboutPlantText">
        You can manage your plants in the Plants tab. For each plant you can add important information such as species, dates, watering habits etc.
    </string>
    <string name="aboutRoomText">
        You can further organise your plants into rooms (just as they are placed at your home).
    </string>
    <string name="aboutAlertText">
        When you enter plants watering habits (days between watering - number of days between after the plant should be watered), you will get regular alerts on
        when to water each plant.
    </string>


    <!-- Home -->
    <string name="home_fragmentLabel">Home</string>

    <!-- About -->
    <string name="about_fragmentLabel">About</string>

    <!-- Settings -->
    <string name="settings_fragmentLabel">Settings</string>


    <!-- Plants attributes -->
    <string name="plantAttrs_name">Name</string>
    <string name="plantAttrs_species">Species</string>
    <string name="plantAttrs_room">Room</string>
    <string name="plantAttrs_datePlanted">Date planted</string>
    <string name="plantAttrs_lastWatered">Last watered</string>
    <string name="plantAttrs_daysBetweenWatering">Days between watering</string>
    <string name="plantAttrs_description">Description</string>

    <!-- Plants list -->
    <string name="plantsList_fragmentLabel">Plants</string>

    <!-- Plant detail -->
    <string name="plantDetail_fragmentLabel">Plant detail</string>

    <!-- Add plant -->
    <string name="addPlant_fragmentLabel">Add plant</string>
    <string name="addPlant_assignRoom">Assign room</string>

    <string name="addPlant_error_mustEnterPlantName">You must enter a plant name</string>
    <string name="addPlant_error_mustEnterPlantSpecies">You must enter a plant species</string>

    <!-- Plants contextual -->
    <string name="plantsContextual_fragmentLabel">Plants of room</string>


    <!-- Rooms attributes -->
    <string name="roomAttrs_name">Name</string>
    <string name="roomAttrs_longitude">Longitude</string>
    <string name="roomAttrs_latitude">Latitude</string>
    <string name="roomAttrs_description">Description</string>


    <!-- Rooms list -->
    <string name="roomsList_fragmentLabel">Rooms</string>

    <!-- Room detail -->
    <string name="roomDetail_fragmentLabel">Room detail</string>

    <!-- Add room -->
    <string name="addRoom_fragmentLabel">Add room</string>
    <string name="addRoom_error_mustEnterRoomName">You must enter a room name</string>


    <!-- Alerts attributes -->
    <string name="supposedToWater">Water:</string>
    <!-- Alerts list -->
    <string name="alertsList_fragmentLabel">Alerts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>