<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/home"
            android:id="@+id/HomeFragment"
            android:icon="@drawable/ic_home"/>

        <item
            android:title="@string/plants"
            android:id="@+id/PlantsListFragment"
            android:icon="@drawable/ic_plant"/>

        <item android:title="@string/rooms"
            android:id="@+id/RoomsListFragment"
            android:icon="@drawable/ic_room"/>

        <item android:title="@string/alerts"
            android:id="@+id/AlertsFragment"
            android:icon="@drawable/ic_watering_can"/>

        <item android:title="@string/settings"
            android:id="@+id/SettingsFragment"
            android:icon="@drawable/ic_settings"/>

        <item android:title="@string/about"
            android:id="@+id/AboutFragment"
            android:icon="@drawable/ic_info"/>
    </group>

</menu>