<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plantdetail.PlantDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/plantImageContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            app:srcCompat="@drawable/ic_baseline_local_florist_24" />

        <cz.mendelu.xmusil5.waterit.views.AttributeWithLabelView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/plantAttrs_name"

            app:layout_constraintTop_toBottomOf="@id/plantImageContainer" />

        <cz.mendelu.xmusil5.waterit.views.AttributeWithLabelView
            android:id="@+id/species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/plantAttrs_species"

            app:layout_constraintTop_toBottomOf="@id/name" />

        <cz.mendelu.xmusil5.waterit.views.AttributeWithLabelView
            android:id="@+id/datePlanted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/plantAttrs_datePlanted"

            app:layout_constraintTop_toBottomOf="@id/species" />

        <cz.mendelu.xmusil5.waterit.views.AttributeWithLabelView
            android:id="@+id/lastWatered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/plantAttrs_lastWatered"

            app:layout_constraintTop_toBottomOf="@id/datePlanted" />

        <cz.mendelu.xmusil5.waterit.views.AttributeWithLabelView
            android:id="@+id/daysBetweenWatering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/plantAttrs_daysBetweenWatering"

            app:layout_constraintTop_toBottomOf="@id/lastWatered" />

        <cz.mendelu.xmusil5.waterit.views.AttributeWithLabelView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/plantAttrs_description"

            app:layout_constraintTop_toBottomOf="@id/daysBetweenWatering" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>