<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plants.addoreditplant.AddOrEditPlantFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <cz.mendelu.xmusil5.waterit.views.ImagePickView
                android:id="@+id/imagePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imagePickButtonText="@string/pickImage"
                app:imagePickInitialPicture="@drawable/ic_room" />

            <cz.mendelu.xmusil5.waterit.views.TextInputView
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/roomAttrs_name"
                app:maxChars="50"
                app:maxLines="1" />

            <cz.mendelu.xmusil5.waterit.views.TextInputView
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/roomAttrs_description"
                app:maxChars="1000"
                app:maxLines="10" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>