<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/aboutTitle"
            style="@style/textViewTitle"
            android:layout_marginTop="30dp"
            android:text="@string/about"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/aboutText"
            style="@style/longTextCaption"
            android:text="@string/about_text"

            app:layout_constraintTop_toBottomOf="@id/aboutTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/alertsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewTitle"
            android:text="@string/alerts"
            android:layout_marginTop="20dp"

            app:layout_constraintTop_toBottomOf="@id/aboutText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alertsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="350dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alertsTitle" />

        <TextView
            android:id="@+id/plantsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewTitle"
            android:text="@string/recentlyPlantedPlants"
            android:layout_marginTop="20dp"

            app:layout_constraintTop_toBottomOf="@id/alertsRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plantsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="350dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plantsTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>